se agregan cambios

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <p>
-        hola estudiates este es mi siitio web
-        web y todo ba bien
+        hola amigos este es mi siitio web
+        web y todo ba bien y ya casi acabo
     </p>
+    
 </body>
 </html>
